<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">定位找你</string>
    <string name="login_username_hint">手机号</string>
    <string name="login_username_format_error">手机号格式错误</string>
    <string name="login_checkcode_hint">验证码</string>
    <string name="login_email_hint">电子邮箱</string>
    <string name="login_password_hint">密码</string>
    <string name="login_confim_password_hint">确认密码</string>
    <string name="login_submit">登录</string>
    <string name="logout_submit">注销</string>
    <string name="login_input_digits">._@0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="login_email_error">邮箱格式错误！</string>
    <string name="login_username_empty">手机号不能为空</string>
    <string name="login_password_empty">密码不能为空</string>
    <string name="login_checkcode_empty">验证码不能为空</string>
    <string name="login_checkcode_error">验证码错误</string>
    <string name="login_username_error">用户名不存在</string>
    <string name="login_password_error">密码错误</string>
    <string name="login_confim_password_error">两次密码不一致</string>
    <string name="login_already_process">正在登录...</string>
    <string name="login_failed">登录失败</string>
    <string name="login_retrieve_password">找回密码</string>
    <string name="login_forgot_password">忘记密码</string>
    <string name="login_register">注册</string>
    <string name="register_get_checkcode">获取验证码</string>
    <string name="login_register_success">注册成功！</string>
    <string name="send_checkcode_prompt">重新发送（%s）</string>
    <!-- tabs -->
    <string name="tab_main_index">首页</string>
    <string name="tab_settings">设置</string>
    <string name="tab_about">关于</string>

    <string-array name="tabs">
        <item>@string/tab_main_index</item>
        <item>@string/tab_settings</item>
        <item>@string/tab_about</item>
    </string-array>

    <!-- index -->
    <string name="person_list_self_name">我的定位</string>
    <string name="person_list_select_hint">选择查看对象</string>
    <string name="person_list_empty_tip">暂时没有查看对象</string>
    <string name="person_list_operate">操作</string>
    <string name="person_list_operate_add">添加</string>
    <string name="person_list_operate_update">更新</string>
    <string name="person_list_operate_delete">删除</string>
    <string name="person_location_data_obtain_error">获取失败</string>
    <string name="person_operate_title">@string/person_list_operate</string>
    <string name="person_operate_delete_text">确认删除“%s”吗？</string>
    <string name="person_operate_add_title">@string/app_name</string>
    <string name="person_operate_add_device_token_hint">输入位置标识码</string>
    <string name="person_operate_add_name_hint">输入备注名</string>
    <string name="person_operate_add_btn">添加</string>
    <string name="person_operate_add_device_token_empty_tip">请输入标识码</string>
    <string name="person_operate_add_name_empty_tip">请输入备注名</string>
    <string name="person_operate_update_title">@string/app_name</string>
    <string name="person_operate_update_name_hint">输入备注名</string>
    <string name="person_operate_update_name_empty_tip">输入备注名</string>
    <string name="person_operate_update_name_same_tip">备注名未发生变化</string>
    <string name="person_operate_update_btn">确认修改</string>

    <!-- device bind -->
    <string name="device_bind_key">标识码</string>
    <string name="device_bind_top_hint">通过标识码可以查询该设备的位置，请勿告诉陌生人</string>
    <string name="device_bind_warning">注：</string>
    <string name="device_bind_obtain_key">获取定位标识</string>
    <string name="device_bind_hide_app_hint">应用后台隐藏运行</string>
    <string name="device_bind_hide_app">隐藏应用</string>
    <string name="device_bind_hide_app_tip">应用隐藏后将不会出现在桌面\n是否确认隐藏？</string>
    <string name="device_bind_key_hint">标识码</string>
    <string name="device_bind_obtain_error">获取失败</string>
    <string name="device_bind_open_location_hint">开启定位</string>
    <string name="device_bind_location_freq_hint">定位频率</string>
    <string name="device_bind_user_info_title">用户信息</string>
    <string name="device_bind_user_name_hint">用户名：</string>
    <string name="device_bind_user_exchange_hint">用户积分：</string>
    <string name="device_bind_user_expire_hint">到期时间：</string>
    <string name="device_bind_permission_tip"><![CDATA[1、如有安装安全软件，需要提供相关权限%s]]></string>
    <string name="device_bind_user_expire_tip"><![CDATA[2、用户到期将无法查看他人位置信息，不影响被查找]]></string>
    <string name="device_bind_permission_ex_tip"><![CDATA[3、如仍无法正常使用，QQ帮助群 : 70167669。]]></string>
    <string name="device_bind_user_charge">充值</string>
    <string name="device_bind_user_free_exchange">免费获取时间</string>
    <string name="device_bind_user_expirationdata_prompt">已到期</string>
    <string name="expirationdate_tip">您的用户时间已经到期，无法正常查看他人信息！</string>
    <!-- about -->
    <string name="about_feedback">意见反馈</string>
    <string name="about_upgrade">检查更新</string>
    <string name="feeback_empty">您没有输入任何反馈信息哦！</string>
    <string name="about_us">关于我们</string>
    <string name="about_qqgroup1">QQ群：70167669</string>
<!--     <string name="about_qqgroup2">QQ 2群：1234567890</string> -->
    <string name="about_disclaimer">用户协议</string>
    <string name="feedback_hint"></string>
    <string name="feedback_contact_hint">手机号/电子邮箱</string>
    <string name="feedback_title">提交建议</string>
    <string name="feedback_submit">提交</string>
    <string name="feedback_commit_prompt">提交成功！</string>
    <string name="version_prompt">当前是最新版本</string>
    <string name="about_version_regex">版本 %s</string>
    <string name="upgrade_tip">检测到新版本，是否现在更新？</string>
    <string name="main_view_person_hint">选择查看对象</string>
    <string name="main_view_person_progress_hint">正在加载...</string>
    <string name="main_view_person_current">当前对象：%1$s</string>
    <string name="main_view_persion_none_hint">请选择查看对象</string>
    <string name="main_view_phone">查看通话记录</string>
    <string name="main_view_sms">查看短信</string>
    <string name="main_view_location">查看位置</string>
    <string name="main_add_person_hint">添加查看对象</string>
    <string name="privacy_location_date_empty_hint">暂没有位置数据</string>
    <string name="privacy_location_hint">位置:</string>
    <string name="privacy_location_date_title">选择日期</string>
    <string name="privacy_location_time_hint">时间:</string>
    <string name="error_network">网络出错啦！</string>
    <!-- dialog -->
    <string name="dialog_prompt">提示</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>

</resources>