<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DialogContentContainerStyle"
    android:padding="@dimen/spacing_10">

    <EditText 
        android:id="@+id/person_operate_add_device_token_et"
        style="@style/AppStyle.Common.InputEdit"
        android:background="@drawable/text_shape_deep_blue"
        android:hint="@string/person_operate_add_device_token_hint"
        android:digits="@string/login_input_digits"
        />

    <EditText 
        android:id="@+id/person_operate_add_name_et"
        style="@style/AppStyle.Common.InputEdit"
        android:layout_below="@id/person_operate_add_device_token_et"
        android:layout_marginTop="@dimen/spacing_10"
        android:background="@drawable/text_shape_deep_blue"
        android:hint="@string/person_operate_add_name_hint"
        android:maxLength="@integer/monitored_person_name_len"
        />
    
</RelativeLayout>
