<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppStyle.RootLayout"
    android:background="@color/deep_sky_blue" >

    <RelativeLayout
        style="@style/AppStyle.ContainerLayout.WrapContent"
        android:layout_marginTop="@dimen/spacing_100"
        android:padding="@dimen/common_padding" >

        <EditText
            android:id="@+id/login_username_et"
            style="@style/AppStyle.Login.Input.Username"
            android:layout_margin="@dimen/common_margin"
            android:background="@drawable/text_shape"
            android:maxLength="11" />

        <EditText
            android:id="@+id/login_checkcode_et"
            style="@style/AppStyle.Login.Input.Checkcode"
            android:layout_below="@id/login_username_et"
            android:layout_margin="@dimen/common_margin"
            android:background="@drawable/text_shape"
            android:inputType="number"
            android:maxLength="4" />

        <Button
            android:id="@+id/get_checkcode_btn"
            android:layout_width="@dimen/checkcode_button_width"
            android:layout_height="@dimen/checkcode_button_height"
            android:layout_alignParentRight="true"
            android:layout_below="@id/login_username_et"
            android:layout_margin="@dimen/common_margin"
            android:background="@drawable/button_seletor"
            android:text="@string/register_get_checkcode"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_14" />

        <EditText
            android:id="@+id/login_password_et"
            style="@style/AppStyle.Login.Input.Password"
            android:layout_below="@id/login_checkcode_et"
            android:layout_margin="@dimen/common_margin"
            android:background="@drawable/text_shape"
            android:hint="@string/login_password_hint" />

        <EditText
            android:id="@+id/login_confim_password_et"
            style="@style/AppStyle.Login.Input.Password"
            android:layout_below="@id/login_password_et"
            android:layout_margin="@dimen/common_margin"
            android:background="@drawable/text_shape"
            android:hint="@string/login_confim_password_hint" />

        <Button
            android:id="@+id/register_submit_btn"
            style="@style/AppStyle.Login.Submit"
            android:layout_below="@id/login_confim_password_et"
            android:layout_margin="@dimen/common_margin"
            android:text="@string/login_register" />
    </RelativeLayout>

</RelativeLayout>