<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppStyle.RootLayout" >

    <LinearLayout
        style="@style/AppStyle.ContainerLayout.WrapContent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/main_view_person_layout"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/spacing_50"
            android:gravity="center"
            android:orientation="horizontal" 
            android:paddingLeft="@dimen/common_padding"
            android:paddingRight="@dimen/common_padding"
            >
            
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:gravity="center"
	            android:orientation="horizontal">
	
	            <TextView
	                android:id="@+id/main_view_person_tv"
	                style="@style/AppStyle.Main.Person"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/main_view_person_hint" />
	            
	            <ImageView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="@dimen/common_margin"
	                android:src="@drawable/dropdown_hint" />
	            
	        </LinearLayout>
        </LinearLayout>
        
        <View android:layout_width="fill_parent"
            android:layout_height="@dimen/spacing_1"
            android:background="@color/deep_sky_blue"/>

        <LinearLayout
            style="@style/AppStyle.ContainerLayout.WrapContent"
            android:orientation="vertical" 
        	android:padding="@dimen/common_padding" >

            <Button
                android:id="@+id/main_view_phone_btn"
                style="@style/AppStyle.Main.Btn"
                android:layout_marginTop="@dimen/spacing_50"
                android:text="@string/main_view_phone" />
            
            <Button
                android:id="@+id/main_view_sms_btn"
                style="@style/AppStyle.Main.Btn"
                android:layout_marginTop="@dimen/spacing_30"
                android:text="@string/main_view_sms" />

            <Button
                android:id="@+id/main_view_location_btn"
                style="@style/AppStyle.Main.Btn"
                android:layout_marginTop="@dimen/spacing_30"
                android:text="@string/main_view_location" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>