<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppStyle.RootLayout">

    <RelativeLayout
        android:id="@+id/person_list_top_layout"
        style="@style/AppStyle.ContainerLayout.WrapContent"
        android:padding="@dimen/spacing_10" >

        <com.zhaoni.findyou.android.main.view.PADrawerLayout
            android:id="@+id/person_list_selected_layout"
            style="@style/AppStyle.ContainerLayout.WrapContent"
            android:layout_height="@dimen/spacing_50"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/person_list_operate_btn"
            android:layout_marginRight="@dimen/spacing_10"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/person_list_selected_inner_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/person_list_selected_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:drawableRight="@drawable/dropdown_hint"
                    android:hint="@string/person_list_select_hint"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_20" />
            </LinearLayout>
            
            <LinearLayout 
	            android:id="@+id/person_list_top_operate_layout"
	           	android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:orientation="horizontal" 
	        	android:layout_gravity="right"
	        	>
                
	            <Button
	                android:id="@+id/person_list_top_operate_add_btn"
		            style="@style/AppStyle.Common.Btn"
		            android:layout_width="wrap_content"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/person_list_operate_add" />
	            
	            <Button
	                android:id="@+id/person_list_top_operate_update_btn"
		            style="@style/AppStyle.Common.Btn"
		            android:layout_width="wrap_content"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/person_list_operate_update" />
	            
	            <Button
	                android:id="@+id/person_list_top_operate_delete_btn"
		            style="@style/AppStyle.Common.Btn"
		            android:layout_width="wrap_content"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/person_list_operate_delete" />
	            
	        </LinearLayout>
        </com.zhaoni.findyou.android.main.view.PADrawerLayout>

        <ImageView
            android:id="@+id/person_list_operate_btn"
            style="@style/AppStyle.Common.Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_alignTop="@id/person_list_selected_layout"
            android:layout_alignBottom="@id/person_list_selected_layout"
            android:padding="@dimen/common_padding"
            android:src="@drawable/person_list_operate"
            android:text="@string/person_list_operate" />
        
    </RelativeLayout>
	
    <android.support.v4.widget.SwipeRefreshLayout  
        android:id="@+id/person_list_date_srl"  
        android:layout_width="match_parent"  
        android:layout_height="match_parent" 
        android:layout_above="@+id/person_list_operate_layout"
        android:layout_below="@id/person_list_top_layout">  
  
        <ListView
	        android:id="@+id/person_list_date_lv"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:paddingLeft="@dimen/spacing_10"
	        android:paddingRight="@dimen/spacing_10"
	        android:paddingBottom="@dimen/spacing_10"
	        android:cacheColorHint="@color/transparent"
	        android:divider="@color/transparent"
	        android:listSelector="@color/transparent"
	        android:fadingEdge="none"
	        android:scrollbars="none" />
    </android.support.v4.widget.SwipeRefreshLayout>  
    
    

    <TextView
        android:id="@+id/person_list_date_empty_tv"
        style="@style/AppStyle.Common.EmptyListHint"
        android:layout_above="@+id/person_list_operate_layout"
        android:layout_below="@id/person_list_top_layout"
        android:text="@string/privacy_location_date_empty_hint" />

    <LinearLayout
        android:id="@+id/person_list_operate_layout"
        style="@style/AppStyle.ContainerLayout.WrapContent"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/spacing_10"
        android:gravity="center_vertical"
        android:orientation="horizontal" 
        android:visibility="gone">

        <Button
            android:id="@+id/person_list_delete_btn"
            style="@style/AppStyle.Common.Btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/person_list_operate_delete" />

        <Button
            android:id="@+id/person_list_update_btn"
            style="@style/AppStyle.Common.Btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_10"
            android:layout_weight="1.0"
            android:text="@string/person_list_operate_update" />
    </LinearLayout>

</RelativeLayout>
