<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppStyle.RootLayout"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/main_view_person_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/spacing_50"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/common_padding"
        android:paddingRight="@dimen/common_padding" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/main_logo_tv"
                style="@style/AppStyle.Main.Person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/main_signin_tv"
                style="@style/AppStyle.Main.Person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/main_login_tv"
                android:text="申请KEY" />
            
            <TextView
                android:id="@+id/main_login_tv"
                style="@style/AppStyle.Main.Person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/spacing_10"
                android:text="登录" />
            
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/spacing_1"
        android:background="@color/deep_sky_blue" 
        android:layout_below="@id/main_view_person_layout"/>

    <RelativeLayout
        style="@style/AppStyle.ContainerLayout.FillParent"
        android:orientation="vertical"
        android:padding="@dimen/common_padding" 
        android:layout_above="@+id/main_add_person_btn"
        android:layout_below="@id/main_view_person_layout">

        <TextView 
	        android:id="@+id/main_view_person_empty_tv"
	        style="@style/AppStyle.Common.EmptyListHint"
	        android:text="@string/privacy_location_date_empty_hint"/>
        
    </RelativeLayout>
    
    <Button
        android:id="@+id/main_add_person_btn"
        style="@style/AppStyle.Main.Btn"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/spacing_30"
        android:layout_marginBottom="@dimen/spacing_30"
        android:layout_marginLeft="@dimen/spacing_10"
        android:layout_marginRight="@dimen/spacing_10"
        android:text="@string/main_add_person_hint" />

</RelativeLayout>